# tanyasiii.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  contact.html  contact.qmd  cv.html  cv.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
Assignment 01/: system_info.docx  system_info.qmd
_site/: contact.html  cv.html  index.html  projects.html  search.json
_site/Assignment 01/: system_info.docx
_site/site_libs/bootstrap/: bootstrap-af73d7f8b2798d457e5d693f8b272848.min.css
site_libs/bootstrap/: bootstrap-43db3b0f4a133d600a41a7ca1284e8ee.min.css
